# challenges

./: pyproject.toml
katapy/challenge_1/: .env  main.py
katapy/challenge_2/: main.py
katapy/challenge_3/: main.py
katapy/challenge_4/: .env  main.py
